--- a/SampleProject/Views/Home/ShowCustomSnippet.cshtml
+++ b/SampleProject/Views/Home/ShowCustomSnippet.cshtml
@@ -1,8 +1,23 @@
 ﻿@model WebSnip.WebSnippet
+<style>
+    #twitter-snippet-placeholder .websnippets-image {
+        border-radius: 8px;
+        height: 200px;
+        width: 200px;
+    }
+</style>
+<div style="padding-top: 60px; text-align: center;background-repeat: no-repeat; background-position: center; margin:0; height: 460px; @Model.GetRenderedPartByName("background")">
+    
+    <div style="float:right; width: 60%;">
+        <a class="twitter-timeline" href="https://twitter.com/MatKainer" data-widget-id="454720756660719616">Tweets von @@MatKainer</a>
+<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + "://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");</script>
 
-<div style="padding-top: 60px; color: white; text-align: center;background-repeat: no-repeat; background-position: center; margin:0 auto; height: 295px; width: 590px; background-image: @Model.GetRenderedPartByName("background")">
-    @Html.Raw(Model.GetRenderedPartByName("image"))
-    <h1>@Model.GetRenderedPartByName("name")</h1>
-    <h2>@Model.GetRenderedPartByName("user")</h2>
-    <p>@Model.GetRenderedPartByName("bio")</p>
+
+    </div>
+    <div style="float:right;width: 30%;">
+        @Html.Raw(Model.GetRenderedPartByName("image"))
+        <h1>@Model.GetRenderedPartByName("name")</h1>
+        <h2>@Model.GetRenderedPartByName("user")</h2>
+        <p>@Model.GetRenderedPartByName("bio")</p>
+    </div>
 </div>
